--- a/cody-back/src/main/resources/application-dev.yml
+++ b/cody-back/src/main/resources/application-dev.yml
@@ -3,25 +3,26 @@
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3308/cody_wardrobe?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8&allowPublicKeyRetrieval=true
-    username: root
-    password: root
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:postgresql://aws-1-ap-northeast-2.pooler.supabase.com:6543/postgres?user=postgres.bdjdshpglpfpqoykpnhw&password=Codywardrobe0727!
+    username: postgres.bdjdshpglpfpqoykpnhw
+    password: Codywardrobe0727!
+    driver-class-name: org.postgresql.Driver
 
   jpa:
     show-sql: true
     properties:
       hibernate:
         format_sql: true
+        jdbc:
+          lob:
+            non_contextual_creation: true
 
 server:
   port: 8080
 
 # CORS 설정 - 개발 환경
 cors:
-  allowed-origins:
-    - http://localhost:3000
-    - http://localhost:3001
+  allowed-origins: http://localhost:3000,http://localhost:3001
 
 logging:
   level:
