--- a/cody-back/src/main/resources/application-prod.yml
+++ b/cody-back/src/main/resources/application-prod.yml
@@ -4,24 +4,26 @@
 
 spring:
   datasource:
-    url: ${DATABASE_URL:jdbc:mysql://localhost:3306/cody_wardrobe}
-    username: ${DATABASE_USERNAME:root}
-    password: ${DATABASE_PASSWORD}
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:postgresql://aws-1-ap-northeast-2.pooler.supabase.com:6543/postgres?user=postgres.bdjdshpglpfpqoykpnhw&password=Codywardrobe0727!
+    username: postgres.bdjdshpglpfpqoykpnhw
+    password: Codywardrobe0727!
+    driver-class-name: org.postgresql.Driver
 
   jpa:
     show-sql: false
     properties:
       hibernate:
         format_sql: false
+        jdbc:
+          lob:
+            non_contextual_creation: true
 
 server:
   port: ${SERVER_PORT:8080}
 
 # CORS 설정 - 프로덕션 환경
 cors:
-  allowed-origins:
-    - ${FRONTEND_URL:https://yourdomain.com}
+  allowed-origins: ${FRONTEND_URL:https://yourdomain.com}
 
 logging:
   level:
