--- a/cody-back/src/main/resources/application.yml
+++ b/cody-back/src/main/resources/application.yml
@@ -15,8 +15,9 @@ spring:
 
   flyway:
     enabled: true
-    baseline-on-migrate: true
-    locations: classpath:db/migration
+    mixed: true
+    validate-on-migrate: false
+    clean-disabled: true
 
 server:
   undertow:
