--- a/cody-front/package.json
+++ b/cody-front/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "scripts": {
     "build": "next build",
+    "pages:build": "npx @cloudflare/next-on-pages",
+    "preview": "npm run pages:build && wrangler pages dev",
+    "deploy": "npm run pages:build && wrangler pages deploy",
     "dev": "next dev",
     "lint": "eslint .",
     "start": "next start"
@@ -61,6 +64,7 @@
     "zod": "3.25.76"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.13.16",
     "@tailwindcss/postcss": "^4.1.9",
     "@types/node": "^22",
     "@types/react": "^19",
