feat: router setting

--- a/cody-front/package.json
+++ b/cody-front/package.json
@@ -3,10 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "next build",
-    "pages:build": "npx @cloudflare/next-on-pages",
-    "preview": "npm run pages:build && wrangler pages dev",
-    "deploy": "npm run pages:build && wrangler pages deploy",
+    "build": "npx @cloudflare/next-on-pages",
     "dev": "next dev",
     "lint": "eslint .",
     "start": "next start"
