--- a/cody-front/wrangler.jsonc
+++ b/cody-front/wrangler.jsonc
@@ -1,6 +1,7 @@
 {
   "name": "codyhelper",
   "compatibility_date": "2024-11-12",
-  "pages_build_output_dir": ".vercel/output/static"
+  "pages_build_output_dir": ".vercel/output/static",
+  "compatibility_flags": ["nodejs_compat"]
 }
 
