--- a/cody-front/wrangler.jsonc
+++ b/cody-front/wrangler.jsonc
@@ -2,6 +2,9 @@
   "name": "codyhelper",
   "compatibility_date": "2024-11-12",
   "pages_build_output_dir": ".vercel/output/static",
-  "compatibility_flags": ["nodejs_compat"]
+  "compatibility_flags": ["nodejs_compat"],
+  "vars": {
+    "NEXT_PUBLIC_API_URL": "https://cody-iuqu.onrender.com/api"
+  }
 }
 
