--- a/cody-back/src/main/resources/application-prod.yml
+++ b/cody-back/src/main/resources/application-prod.yml
@@ -23,7 +23,7 @@ server:
 
 # CORS 설정 - 프로덕션 환경
 cors:
-  allowed-origins: https://fc8f9698.cody-60p.pages.dev,http://localhost:3000,http://localhost:3001
+  allowed-origins: https://cody-60p.pages.dev,http://localhost:3000,http://localhost:3001
 
 logging:
   level:
